--- a/dashboard.html
+++ b/dashboard.html
@@ -3,28 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Sistema</title>
+    <title>Dashboard - Sistema de Gestión</title>
+    <meta name="description" content="Panel de control del sistema">
+
     <script src="https://resource.trickle.so/vendor_lib/unpkg/react@18/umd/react.production.min.js"></script>
     <script src="https://resource.trickle.so/vendor_lib/unpkg/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://resource.trickle.so/vendor_lib/unpkg/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.9/dist/chart.umd.min.js"></script>
+
     <style type="text/tailwindcss">
+    @layer theme {
+        :root {
+            --primary-color: #ff8c00;
+            --secondary-color: #1e3a8a;
+            --accent-color: #fbbf24;
+        }
+    }
+
     @layer base {
         body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Times New Roman', serif;
+            font-family: Helvetica, Arial, sans-serif;
+        }
+        
+        h1, h2, h3, h4, h5, h6 {
+            font-style: italic;
         }
     }
     </style>
-    <link href="dashboard-style.css" rel="stylesheet">
 </head>
 <body>
     <div id="root"></div>
     <script type="text/babel" src="utils/auth.js"></script>
-    <script type="text/babel" src="components/Topbar.js"></script>
+    <script type="text/babel" src="components/TopBar.js"></script>
     <script type="text/babel" src="components/Sidebar.js"></script>
     <script type="text/babel" src="components/StatsCard.js"></script>
     <script type="text/babel" src="components/Calendar.js"></script>
